@@ -310,6 +310,7 @@ AX_PROG_MX
 AX_PROG_LIBEXECINFO
 AX_PROG_DYNINST
 AX_PROG_COUNTERS # Check for PAPI and/or PMAPI
+AX_PROG_SIONLIB
 
 AX_CHECK_LOAD_BALANCING
 
